--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
 </head>
 <body>
     <header class="header">
-        <img src="hankafemlogo.png" alt="Han Kafem Logo" class="logo">
+    <div class="header-left">
+        <div class="logo-wrapper">
+            <img src="hankafemlogo.png" alt="Han Kafem Logo" class="logo">
+        </div>
         <h1>HAN KAFEM</h1>
+    </div>
+    <div class="header-content">
         <p>Cilveli Kahvemizi Denediniz mi?</p>
-    </header>   
+        <img src="cilveli-kahve.jpg" alt="Cilveli Kahve" class="feature-image">
+    </div>
+</header>
 
     <main class="menu-container">
         <section class="category">
@@ -24,6 +31,82 @@
                 <div class="menu-item">
                     <h3>ÇİLEKLİ MAGNOLYA</h3>
                     <span class="price">130₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>LOTUSLU MAGNOLYA</h3>
+                    <span class="price">130₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>DUBAİ ÇİKOLATALI MAGNOLYA</h3>
+                    <span class="price">130₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>FISTIKLI MAGNOLYA</h3>
+                    <span class="price">130₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>KAZANDİBİ</h3>
+                    <span class="price">130₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>PROFİTEROL</h3>
+                    <span class="price">130₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>CHEESCAKE</h3>
+                    <span class="price">130₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>SAN SEBASTİAN</h3>
+                    <span class="price">200₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>ANTEP FISTIKLI SPOONFUL</h3>
+                    <span class="price">220₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>BEYAZ SPOONFUL</h3>
+                    <span class="price">200₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>LOTUS SPOONFUL</h3>
+                    <span class="price">200₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>ÇİKOLATALI SPOONFULL</h3>
+                    <span class="price">200₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>TRALİÇE</h3>
+                    <span class="price">130₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>TİRAMUSU</h3>
+                    <span class="price">130₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>FISTIKLI BAKLAVA</h3>
+                    <span class="price">220₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>CEVİZLİ BAKLAVA</h3>
+                    <span class="price">200₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>MİDYE BAKLAVA</h3>
+                    <span class="price">200₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>ŞÖBİYET BAKLAVA</h3>
+                    <span class="price">200₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>SÜTLÜ KEMALPAŞA</h3>
+                    <span class="price">180₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>SÜTLÜ KADAYIF</h3>
+                    <span class="price">220₺</span>
                 </div>
                 <!-- Diğer tatlılar buraya eklenecek -->
             </div>
@@ -40,6 +123,26 @@
                     <h3>SADE SODA</h3>
                     <span class="price">50₺</span>
                 </div>
+                <div class="menu-item">
+                    <h3>AYRAN</h3>
+                    <span class="price">60₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>MEYVELİ SODA</h3>
+                    <span class="price">60₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>MEŞRUBAT</h3>
+                    <span class="price">80₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>CHURCHİLL</h3>
+                    <span class="price">75₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>REDBULL</h3>
+                    <span class="price">120₺</span>
+                </div>
                 <!-- Diğer soğuk içecekler buraya eklenecek -->
             </div>
         </section>
@@ -53,7 +156,35 @@
                 </div>
                 <div class="menu-item">
                     <h3>NESCAFE</h3>
-                    <span class="price">50₺</span>
+                    <span class="price">100₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>HAN ÇAYI</h3>
+                    <span class="price">80₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>KIŞ ÇAYI</h3>
+                    <span class="price">80₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>IHLAMUR</h3>
+                    <span class="price">80₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>ADA ÇAYI</h3>
+                    <span class="price">80₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>SALEP</h3>
+                    <span class="price">100₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>TÜRK KAHVESİ</h3>
+                    <span class="price">90₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>CİLVELİ KAHVE</h3>
+                    <span class="price">110₺</span>
                 </div>
                 <!-- Diğer sıcak içecekler buraya eklenecek -->
             </div>
