--- a/index.html
+++ b/index.html
@@ -26,39 +26,39 @@
             <div class="menu-items">
                 <div class="menu-item">
                     <h3>SUPANGLE</h3>
-                    <span class="price">120₺</span>
+                    <span class="price">150₺</span>
                 </div>
                 <div class="menu-item">
                     <h3>ÇİLEKLİ MAGNOLYA</h3>
-                    <span class="price">130₺</span>
+                    <span class="price">150₺</span>
                 </div>
                 <div class="menu-item">
                     <h3>LOTUSLU MAGNOLYA</h3>
-                    <span class="price">130₺</span>
+                    <span class="price">150₺</span>
                 </div>
                 <div class="menu-item">
                     <h3>DUBAİ ÇİKOLATALI MAGNOLYA</h3>
-                    <span class="price">130₺</span>
+                    <span class="price">150₺</span>
                 </div>
                 <div class="menu-item">
                     <h3>FISTIKLI MAGNOLYA</h3>
-                    <span class="price">130₺</span>
+                    <span class="price">150₺</span>
                 </div>
                 <div class="menu-item">
                     <h3>KAZANDİBİ</h3>
-                    <span class="price">130₺</span>
+                    <span class="price">150₺</span>
                 </div>
                 <div class="menu-item">
                     <h3>PROFİTEROL</h3>
-                    <span class="price">130₺</span>
+                    <span class="price">160₺</span>
                 </div>
                 <div class="menu-item">
                     <h3>CHEESCAKE</h3>
-                    <span class="price">130₺</span>
+                    <span class="price">150₺</span>
                 </div>
                 <div class="menu-item">
                     <h3>SAN SEBASTİAN</h3>
-                    <span class="price">200₺</span>
+                    <span class="price">220₺</span>
                 </div>
                 <div class="menu-item">
                     <h3>ANTEP FISTIKLI SPOONFUL</h3>
@@ -78,11 +78,11 @@
                 </div>
                 <div class="menu-item">
                     <h3>TRALİÇE</h3>
-                    <span class="price">130₺</span>
+                    <span class="price">150₺</span>
                 </div>
                 <div class="menu-item">
                     <h3>TİRAMUSU</h3>
-                    <span class="price">130₺</span>
+                    <span class="price">150₺</span>
                 </div>
                 <div class="menu-item">
                     <h3>FISTIKLI BAKLAVA</h3>
@@ -94,11 +94,11 @@
                 </div>
                 <div class="menu-item">
                     <h3>MİDYE BAKLAVA</h3>
-                    <span class="price">200₺</span>
+                    <span class="price">220₺</span>
                 </div>
                 <div class="menu-item">
                     <h3>ŞÖBİYET BAKLAVA</h3>
-                    <span class="price">200₺</span>
+                    <span class="price">220₺</span>
                 </div>
                 <div class="menu-item">
                     <h3>SÜTLÜ KEMALPAŞA</h3>
@@ -108,6 +108,7 @@
                     <h3>SÜTLÜ KADAYIF</h3>
                     <span class="price">220₺</span>
                 </div>
+
                 <!-- Diğer tatlılar buraya eklenecek -->
             </div>
         </section>
@@ -125,11 +126,23 @@
                 </div>
                 <div class="menu-item">
                     <h3>AYRAN</h3>
-                    <span class="price">60₺</span>
+                    <span class="price">40₺</span>
                 </div>
                 <div class="menu-item">
-                    <h3>MEYVELİ SODA</h3>
-                    <span class="price">60₺</span>
+                    <h3>KARPUZ ÇİLEKLİ SODA</h3>
+                    <span class="price">65₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>ELMALI SODA</h3>
+                    <span class="price">65₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>LİMONLU SODA</h3>
+                    <span class="price">65₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>MANDALİNALI SODA</h3>
+                    <span class="price">65₺</span>
                 </div>
                 <div class="menu-item">
                     <h3>MEŞRUBAT</h3>
@@ -137,12 +150,57 @@
                 </div>
                 <div class="menu-item">
                     <h3>CHURCHİLL</h3>
-                    <span class="price">75₺</span>
+                    <span class="price">100₺</span>
                 </div>
                 <div class="menu-item">
                     <h3>REDBULL</h3>
                     <span class="price">120₺</span>
                 </div>
+                <div class="menu-item">
+                    <h3>FUSETEA KARPUZ</h3>
+                    <span class="price">80₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>LİMONATA</h3>
+                    <span class="price">120₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>SPRİTE</h3>
+                    <span class="price">80₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>FANTA</h3>
+                    <span class="price">80₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>COLA</h3>
+                    <span class="price">120₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>ŞEFTALİ FUSETEA</h3>
+                    <span class="price">80₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>MANGO FUSETEA</h3>
+                    <span class="price">80₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>COLA</h3>
+                    <span class="price">120₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>ŞEFTALİ MEYVE SUYU</h3>
+                    <span class="price">80₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>KARIŞIK MEYVE SUYU</h3>
+                    <span class="price">80₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>VİŞNELİ MEYVE SUYU</h3>
+                    <span class="price">80₺</span>
+                </div>
+
                 <!-- Diğer soğuk içecekler buraya eklenecek -->
             </div>
         </section>
@@ -157,10 +215,6 @@
                 <div class="menu-item">
                     <h3>NESCAFE</h3>
                     <span class="price">100₺</span>
-                </div>
-                <div class="menu-item">
-                    <h3>HAN ÇAYI</h3>
-                    <span class="price">80₺</span>
                 </div>
                 <div class="menu-item">
                     <h3>KIŞ ÇAYI</h3>
@@ -183,9 +237,58 @@
                     <span class="price">90₺</span>
                 </div>
                 <div class="menu-item">
+                    <h3>MESİR ÇAYI</h3>
+                    <span class="price">80₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>KARADUT ORALET</h3>
+                    <span class="price">50₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>KİVİ ORALET</h3>
+                    <span class="price">50₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>ELMA ORALET</h3>
+                    <span class="price">500₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>PORTAKAL ORALET</h3>
+                    <span class="price">50₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>OSMANLI KAHVESİ</h3>
+                    <span class="price">90₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>DİBEK KAHVESİ</h3>
+                    <span class="price">90₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>SÜTLÜ OSMANLI KAHVESİ</h3>
+                    <span class="price">90₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>SÜTLÜ MENENGİÇ KAHVESİ</h3>
+                    <span class="price">90₺</span>
+                </div>
+                <div class="menu-item">
                     <h3>CİLVELİ KAHVE</h3>
                     <span class="price">110₺</span>
                 </div>
+                <div class="menu-item">
+                    <h3>DAMLA SAKIZLI TÜRK KAHVESİ</h3>
+                    <span class="price">100₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>SICAK ÇİKOLATA</h3>
+                    <span class="price">100₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>NANE LİMON</h3>
+                    <span class="price">60₺</span>
+                </div>
+
                 <!-- Diğer sıcak içecekler buraya eklenecek -->
             </div>
         </section>
