--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 </div>
                 <div class="menu-item">
                     <h3>COLA</h3>
-                    <span class="price">120₺</span>
+                    <span class="price">80₺</span>
                 </div>
                 <div class="menu-item">
                     <h3>FANTA</h3>
@@ -208,6 +208,14 @@
                 <div class="menu-item">
                     <h3>NESCAFE</h3>
                     <span class="price">100₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>NORMAL LATTE</h3>
+                    <span class="price">120₺</span>
+                </div>
+                <div class="menu-item">
+                    <h3>BADEMLİ LATTE</h3>
+                    <span class="price">150₺</span>
                 </div>
                 <div class="menu-item">
                     <h3>SICAK ÇİKOLATA</h3>
