--- a/index.html
+++ b/index.html
@@ -15,8 +15,15 @@
         <h1>HAN KAFEM</h1>
     </div>
     <div class="header-content">
-        <p>Cilveli Kahvemizi Denediniz mi?</p>
-        <img src="cilveli-kahve.jpg" alt="Cilveli Kahve" class="feature-image">
+        <p>2026'ya HAN KAFEDE GİRMEK İSTER MİSİNİZ?</p>
+        <button id="details-button">Detaylar için tıklayınız</button>
+        <div id="feature-preview" class="feature-preview">
+            <img src="yilbasi.png" alt="Yılbaşı görseli" class="feature-image" id="feature-image">
+            <div class="feature-text">
+                <h2>HAN KAFEM</h2>
+                <p>MUTLU VE SAĞLIKLI YILLAR DİLER</p>
+            </div>
+        </div>
     </div>
 </header>
 
