--- a/index.html
+++ b/index.html
@@ -15,15 +15,8 @@
         <h1>HAN KAFEM</h1>
     </div>
     <div class="header-content">
-        <p>2026'ya HAN KAFEDE GİRMEK İSTER MİSİNİZ?</p>
-        <button id="details-button">Detaylar için tıklayınız</button>
-        <div id="feature-preview" class="feature-preview">
-            <img src="yilbasi.png" alt="Yılbaşı görseli" class="feature-image" id="feature-image">
-            <div class="feature-text">
-                <h2>HAN KAFEM</h2>
-                <p>MUTLU VE SAĞLIKLI YILLAR DİLER</p>
-            </div>
-        </div>
+        <p>Cilveli Kahvemizi Denediniz mi?</p>
+        <img src="cilveli-kahve.jpg" alt="Cilveli Kahve" class="feature-image">
     </div>
 </header>
 
@@ -123,7 +116,7 @@
         <section class="category">
             <h2>🥤 SOĞUK İÇECEKLER</h2>
             <div class="menu-items">
-                <div class="menu-item">
+               <div class="menu-item">
                     <h3>SU</h3>
                     <span class="price">20₺</span>
                 </div>
@@ -208,7 +201,7 @@
         <section class="category">
             <h2>☕ SICAK İÇECEKLER</h2>
             <div class="menu-items">
-                <div class="menu-item">
+                 <div class="menu-item">
                     <h3>ÇAY</h3>
                     <span class="price">30₺</span>
                 </div>
@@ -300,6 +293,11 @@
                 <!-- Diğer sıcak içecekler buraya eklenecek -->
             </div>
         </section>
+        <!-- Not alanı: Sıcak içecekler altına görünecek not -->
+            <div class="menu-note">
+                <div class="menu-note-text">2026 Hepimize Sağlık, Mutluluk ve Huzur Getirsin</div>
+                <div class="menu-note-author">— Han Kafem</div>
+            </div>
     </main>
 
     <footer class="footer">
